# sqlalchemy-jdbc-generic

./: .gitignore  LICENSE  LICENSE.txt  README.md  pyproject.toml  setup.cfg
sqlajdbc/: __init__.py  sqlajdbc.py
