[metadata]
name = sqlalchemy-jdbc-generic
description = Universal JDBC Dialect for SQLAlchemy
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bwadle/sqlalchemy-jdbc-generic
license = AT&T BSD
license_files = LICENSE.txt
keywords = sqlalchemy jdbc 
platform = any

[options]
setup_requires = setuptools_scm
install_requires = 
    sqlalchemy
    jaydebeapi

packages = find:
include_package_data = True

[options.packages.find]
include = sqlajdbc

[options.entry_points]
sqlalchemy.dialects = 
    sqlajdbc=sqlajdbc:dialect