[metadata]
name = sqlalchemy-jdbc-generic
description = Universal JDBC Dialect for SQLAlchemy
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bwadle/sqlalchemy-jdbc-generic
author = Bryce Wadle
author_email = brycew@att.com
license = AT&T BSD
license_files = LICENSE.txt
classifiers = 
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: Other Environment
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Information Technology
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: SQL
    Topic :: Database
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
keywords = sqlalchemy jdbc database db sql java jpype dialect
platform = any
project_urls = 
    Documentation=https://github.com/bwadle/sqlalchemy-jdbc-generic
    Source=https://github.com/bwadle/sqlalchemy-jdbc-generic
    Issues=https://github.com/bwadle/sqlalchemy-jdbc-generic/issues

[options]
setup_requires = setuptools_scm
install_requires = 
    sqlalchemy
    jaydebeapi

packages = find:
include_package_data = True

[options.packages.find]
include = sqlajdbc

[options.entry_points]
sqlalchemy.dialects = 
    sqlajdbc=sqlajdbc:dialect